# MemorizedMCP

./: .deepsource.toml  .gitignore  AUTO-ALLOW-FIX-SUMMARY.md  Cargo.toml  FIX-APPLIED-PID-LOCK.md  FIXES-SUMMARY.md  QUICK-START-VSCODE.md  README.md  tmp_doc.md
.cursor/: mcp.json
.cursor/commands/: context.md  kg.md
.cursor/rules/: coding_practices-documentation-jsdoc.mdc  context7-mcp-tools-instructions.mdc  guide-for-using-mcp-servers.mdc  react-best-practices-and-standard-full-guide-2025.mdc
changelogs/: CHANGELOG-concurrent-fix.md  CHANGELOG-connection-fix.md
docs/: API.md  Architecture.md  Dashboards.md  Design.md  Development-Integration.md  Memory-Layers.md  Operations.md  Overview.md  Performance.md  Requirements-Compliance.md  Requirements.md  Roadmap.md  Schema.md  Storage.md  Tasks2.md  Testing.md  TestingResult.md
docs/mcp_docs/: ADR-0001-Architecture.md  Auto-Allow-Fix.md  Concurrent-Request-Fix.md  Database-Lock-Fix.md  MCP_Quickstart.md  MCP_Tools.md  PID-Lock-Fix.md  README.md  Release-Guide.md  Runbook.md  Troubleshooting.md  User-Guide.md  VS-Code-Kilo-Fix.md
scripts/: run_tests.ps1  test_mcp_connection.ps1  test_mcp_stdio.ps1
scripts/test_data/index/tantivy/: .managed.json  meta.json
scripts/test_data/warm/kv/: db  snap.0000000000000CD5
server/: Cargo.toml
server/benches/: fusion_bench.rs
server/src/: config.rs  embeddings.rs  kg.rs  main.rs  vector_index.rs
specs/: ProjectFullSpecs.md
