[package]
name = "memory_mcp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
hyper = "1"
sled = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "fast-rng"] }
pulldown-cmark = "0.9"
lopdf = "0.29"
dotenvy = "0.15"
tantivy = { version = "0.25", default-features = false, features = ["mmap", "lz4-compression"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
bytemuck = { version = "1", features = ["extern_crate_std"] }
regex = "1"
petgraph = "0.6"
rayon = "1"
windows-sys = { version = "0.59", features = ["Win32_System_ProcessStatus","Win32_System_Threading"] }
libc = "0.2"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
rand = "0.8"

[features]
default = []
fastembed = []
